fix bad syntax in content.yaml

--- a/data/content.yaml
+++ b/data/content.yaml
@@ -126,10 +126,7 @@ Skills:
       - Jira
       - Audio and Video Engineering
       - Netsuite
-      - Software Packaging:
-        - Debian
-        - Snap
-        - Tinycore Linux
+      - Software Packaging - Debian, Snap, Tinycore Linux
 
 Projects:
   - Name: MVOS
