--- a/data/content.yaml
+++ b/data/content.yaml
@@ -132,12 +132,12 @@ Skills:
       - Software Packaging - Debian, Snap, Tinycore Linux
 
 Interests:
-  - Bouldering
-  - Cooking
-  - Windsurfing
-  - Bossa Nova
-  - Design
-  - Languages
+  - Guitar
+  - Parrots
+  - Home Automation
+  - Games
+  - Cycling
+  - Psychology
 
 
 Projects:
