--- a/config.toml
+++ b/config.toml
@@ -15,15 +15,15 @@ enableMetaTags = true
 colorLight = "#fff"
 colorDark = "#666"
 colorPageBackground = "#ddd"
-colorPrimary = "#e3bfb8"
+colorPrimary = "#d64937"
 colorSecondary = "#aaa"
 colorIconPrimary = "#fff"
-colorIconBackground = "#e3bfb8"
+colorIconBackground = "#d64937"
 colorRightColumnBackground = "#f5f5f5"
 colorRightColumnHeadingText = "#666"
 colorRightColumnBodyText = "#666"
 colorRightColumnIconPrimary = "#fff"
-colorRightColumnIconBackground = "#e3bfb8"
+colorRightColumnIconBackground = "#d64937"
 pages = 1
 # Set this param to 'true' to swap the bar positions
 swapColumns = false
