--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://www.davidmartinka.com/
 languageCode: en-us
-title: My New Hugo Site
+title: David Martinka
 theme: almeida-cv
