--- a/hugo.yaml
+++ b/hugo.yaml
@@ -14,16 +14,16 @@ disableKinds: ["page", "section", "taxonomy", "term", "RSS", "sitemap"]
 params:
   enableMetaTags: true
   colorLight: "#fff"
-  colorDark: "#666"
-  colorPageBackground: "#ddd"
+  colorDark: "#535353"
+  colorPageBackground: "#bbb"
   colorPrimary: "#d64937"
   colorSecondary: "#aaa"
-  colorIconPrimary: "#fff"
+  colorIconPrimary: "#f9f9f9"
   colorIconBackground: "#d64937"
-  colorRightColumnBackground: "#f5f5f5"
-  colorRightColumnHeadingText: "#666"
+  colorRightColumnBackground: "#dcdcdc"
+  colorRightColumnHeadingText: "#535353"
   colorRightColumnBodyText: "#666"
-  colorRightColumnIconPrimary: "#fff"
+  colorRightColumnIconPrimary: "#f9f9f9"
   colorRightColumnIconBackground: "#d64937"
   pages: 1
   # Set this param to 'true' to swap the bar positions
