--- a/hugo.yaml
+++ b/hugo.yaml
@@ -17,7 +17,7 @@ params:
   colorDark: "#535353"
   colorPageBackground: "#bbb"
   colorPrimary: "#d64937"
-  colorSecondary: "#aaa"
+  colorSecondary: "#888"
   colorIconPrimary: "#f9f9f9"
   colorIconBackground: "#d64937"
   colorRightColumnBackground: "#dcdcdc"
